Add multirole support to KPI plans API
